# neomod

./: .clangd-template  .git-blame-ignore-revs  .gitattributes  .gitignore  Makefile.am  Makefile.in  README.md  aclocal.m4  autogen.sh  bump_version.sh  configure  configure.ac
.github/workflows/: linux-aarch64.yaml  linux-multiarch.yml  web-wasm32.yml  win-multiarch.yml
assets/: Info.plist.in  neomod.icns  neomod.manifest  resource.rc
assets/binary/: dx_shaders_embed.manifest  gl_shaders_embed.manifest  misc_embed.manifest
assets/misc/: credits.txt  licenses.txt
assets/shaders/: DX11_text_f.hlsl  DX11_text_v.hlsl  GL_sliderSDF_f.glsl  GL_sliderSDF_v.glsl  GL_text_f.glsl  GL_text_v.glsl  SDLGPU_actual_flashlight_f.msl  SDLGPU_actual_flashlight_v.msl  SDLGPU_cursortrail_f.msl  SDLGPU_cursortrail_v.msl  SDLGPU_default_f.msl  SDLGPU_flashlight_f.msl  SDLGPU_slider_f.msl  SDLGPU_slider_v.msl  SDLGPU_smoothclip_f.msl  SDLGPU_smoothclip_v.msl  SDLGPU_text_f.glsl  SDLGPU_text_f.hlsl  SDLGPU_text_f.msl  SDLGPU_text_v.hlsl  SDLGPU_text_v.msl  VK_actual_flashlight_f.glsl  VK_actual_flashlight_v.glsl  VK_cursortrail_f.glsl  VK_cursortrail_v.glsl  VK_default_f.glsl  VK_default_v.glsl  VK_flashlight_f.glsl  VK_sliderSDF_f.glsl  VK_slider_f.glsl  VK_slider_v.glsl  VK_smoothclip_f.glsl  VK_smoothclip_v.glsl
build-aux/: gen_binary_embed.py  gen_compdb.py  gen_translations.py  pack_sdlgpu_shader.py  pack_shaders.py
build-aux/misc/: 0002-libmpg123-hardcode-aarch64-neon.patch  SDL3-IS15656-D3D12-latency-poc.patch  SDL3-PR15376-macos-scrollwheel.patch  SDL3-WIP-gpu_vulkan-Address-more-defragmentation-related-.patch  SDL3-gpu_metal-Hold-disposeLock-in-PerformPendingDestroys.patch  SDL3-rawinput-improvements.patch  discord-rpc-fixes.cmake  libbz2-Makefile-macos
cmake-win/: CMakeLists.txt  build_timestamp.h.in  config.h.in  dependencies.cmake
cmake-win/src/: CMakeLists.txt
libraries/: MD5.cpp  demoji.c  demoji.h
libraries/glad/: glad_gl.cpp
libraries/neotrace/src/: backend_emscripten.cpp  capture_execinfo.cpp  capture_unwind.cpp  capture_windows.cpp  neotrace.cpp  neotrace_backend.h  symbolize_dbghelp.cpp  symbolize_elf_symtab.cpp  symbolize_posix.cpp
po/: fr.po  neomod.pot  pl.po  ru.po  update.sh
src/: Makefile.sources  build_timestamp.h.in  config.h.in  pch.h
src/App/: App.h  AppRegistry.cpp  AppRunner.cpp  AppRunner.h
src/App/Neomod/: AboutScreen.cpp  AboutScreen.h  AbstractBeatmapInterface.cpp  AbstractBeatmapInterface.h  BackgroundImageHandler.cpp  BackgroundImageHandler.h  Bancho.cpp  Bancho.h  BanchoAes.cpp  BanchoApi.cpp  BanchoApi.h  BanchoLeaderboard.cpp  BanchoLeaderboard.h  BanchoNetworking.cpp  BanchoNetworking.h  BanchoPacket.cpp  BanchoPacket.h  BanchoProtocol.cpp  BanchoProtocol.h  BanchoSubmitter.cpp  BeatmapInstallOverlay.cpp  BeatmapInstallOverlay.h  BeatmapInstaller.cpp  BeatmapInstaller.h  BeatmapInterface.cpp  BeatmapInterface.h  Changelog.cpp  Changelog.h  Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h  Collections.cpp  Collections.h  Database.cpp  Database.h  DatabaseBeatmap.cpp  DatabaseBeatmap.h  DatabaseBeatmapTypes.h  DownloadHandle.h  (+130 more)
src/App/Tests/: AsyncPoolTest.cpp  NetworkTest.cpp  NetworkTest.h  TestMacros.h
src/Engine/: AnimationHandler.cpp  AnimationHandler.h  ConsoleReader.cpp  ConsoleReader.h  DiscordInterface.cpp  DiscordInterface.h  Engine.cpp  Engine.h  EngineConfig.h  Logging.cpp  Logging.h  NetworkHandler.cpp  NetworkHandler.h  NetworkHandler_wasm.cpp  Profiler.cpp  SysMon.cpp  Thread.cpp  Thread.h  Timing.cpp  URLHistory.cpp  URLHistory.h  i18n.cpp  i18n.h
src/Engine/Async/: AsyncPool.cpp  AsyncPool.h
src/Engine/ConVars/: ConVar.cpp  ConVar.h  ConVarDefs.h  ConVarHandler.cpp  ConVarHandler.h  Console.cpp
src/Engine/File/: Archival.cpp  Archival.h  ByteBufferedFile.cpp  ByteBufferedFile.h  DirectoryWatcher.cpp  File.cpp  File.h
src/Engine/Input/: KeyBindings.cpp  KeyBindings.h  Keyboard.cpp  Keyboard.h  KeyboardEvent.h  Mouse.cpp  Mouse.h  MouseListener.h  Touch.cpp  Touch.h
src/Engine/Renderer/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Graphics_fwd.h  Graphics_private.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  VertexArrayObject.cpp  VertexArrayObject.h
src/Engine/Resources/: Font.cpp  Font.h  Image.cpp  Image.h  Resource.cpp  Resource.h  TextureAtlas.cpp  TextureAtlas.h
src/Engine/Sound/: Sound.cpp  SoundEngine.cpp  SoundEngine.h
src/GUI/: CBaseUIButton.cpp  CBaseUIButton.h  CBaseUICheckbox.cpp  CBaseUICheckbox.h  CBaseUIContainer.cpp  CBaseUIContainer.h  CBaseUIDispatch.cpp  CBaseUIDispatch.h  CBaseUIElement.cpp  CBaseUIElement.h  CBaseUIImage.cpp  CBaseUIImage.h  CBaseUIImageButton.cpp  CBaseUIImageButton.h  CBaseUILabel.cpp  CBaseUILabel.h  CBaseUIScrollView.cpp  CBaseUIScrollView.h  CBaseUISlider.cpp  CBaseUISlider.h  CBaseUITextbox.cpp  CBaseUITextbox.h  CBaseUIWindow.cpp  CBaseUIWindow.h  CWindowManager.cpp  UIDispatch.cpp  UIDispatch.h
src/GUI/Windows/: ConsoleBox.cpp  ConsoleBox.h  VisualProfiler.cpp  VisualProfiler.h
src/Platform/: BaseEnvironment.h  Environment.cpp  Environment.h  GPUDriverConfigurator.cpp  environment_private.h  main.cpp  main_impl.cpp
src/Platform/WASM/: wasm-node-polyfill.js
src/Platform/Windows/: CrashHandler.cpp
src/Util/: CDynArray-inst.h  CDynArray.cpp  CDynArray.h  Color.h  EnumString.h  Hashing.h  InlineVec.h  MD5Hash.cpp  MD5Hash.h  MakeDelegateWrapper.h  Matrices.h  Parsing.h  Quaternion.cpp  Quaternion.h  Rect.cpp  Rect.h  SString.cpp  SString.h  StaticPImpl.h  UString.h  UniString.cpp  UniString.h  Vectors.cpp  Vectors.h  Vectors_fwd.h  crypto.h  dynutils.cpp  noinclude.h
src/Util/CompatShims/: ContainerRanges.h
src/Util/SyncPrimitives/: SyncCV.h
tests/network/: network_test_server.py
tests/ui/: .gitignore  pixelprobe.py  run.py  run.sh
tools/diffcalc/: Makefile
tools/font-compression/: NOTE  subset_blobmoji.py
tools/neomod.js/: Makefile  test.mjs
tools/neosu.js/: Makefile  NeosuJs.cpp
tools/network-test-server/: network_test_server.py
translations/: de.po  fr.po  ja.po  neomod.pot  pl.po  ru.po
(+176 files in other folders)
